--- a/.github/workflows/test_secret.yml
+++ b/.github/workflows/test_secret.yml
@@ -11,6 +11,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Display var
+      env:
+        TEST_VAR: ${{ vars.TEST_VAR }}
+      run: echo "My secret value is $TEST_VAR"
+
     - name: Display Secret
       env:
         MY_SECRET: ${{ secrets.DUMMY }}
