stagingとproductionの両方に適用できるように変更

--- a/.github/workflows/prod_test_secret_and_var.yml
+++ b/.github/workflows/prod_test_secret_and_var.yml
@@ -3,9 +3,9 @@ name: Test Secret
 on: [push]
 
 jobs:
-  test_secret:
+  prod_test_secret:
     runs-on: ubuntu-latest
-    environment: staging
+    environment: production
 
     steps:
     - name: Checkout code
