条件の追加

--- a/.github/workflows/test_on_pull_request.yml
+++ b/.github/workflows/test_on_pull_request.yml
@@ -28,6 +28,7 @@ jobs:
   example_execution:
     runs-on: ubuntu-latest
     needs: check_need_to_run
+    if: ${{ needs.check_need_to_run.outputs.need_to_run_lint_and_test == 'true' }}
 
     steps:
     - name: execute echo
